--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Frontend Mentor | Stats preview card component</title>
+    <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
